# swhkd

./: Cargo.toml
swhkd-libinput/: Cargo.toml
swhkd-libinput/src/: main.rs
